# tvmaze-sync

./: .gitignore  Dockerfile  README.md  config.example.yaml  docker-compose.yml  pyproject.toml  pytest.ini  requirements.txt
.github/: ARCHITECTURE.md  MODULES.md
.github/workflows/: docker-publish.yml
src/: __init__.py  config.py  database.py  main.py  metrics.py  models.py  processor.py  scheduler.py  server.py  state.py
src/clients/: __init__.py  sonarr.py  tvmaze.py
tests/: conftest.py  test_config.py  test_database.py  test_main.py  test_metrics.py  test_models.py  test_processor.py  test_scheduler.py  test_server.py  test_sonarr.py  test_state.py  test_tvmaze.py
